--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://R0nde1.github.io/Codetails",
+  "homepage": "https://SkybaMaryna.github.io/Codetails",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url ./"
